packages/iris-common/src/styles/text.css
:root {
	@apply hyphens-auto;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	font-variant-ligatures: common-ligatures discretionary-ligatures;
	font-feature-settings:
		'kern' on,
		'liga' on,
		'calt' on,
		'dlig' off,
		'hlig' off,
		'swsh' off,
		'salt' off;
}

h1 {
	@apply text-2xl font-bold my-3;
}

h2 {
	@apply text-xl font-bold my-3;
}

h3 {
	@apply text-lg font-bold my-2.5;
}

h4 {
	@apply font-bold my-2.5;
}

h5,
h6 {
	@apply font-bold after:font-bold after:font-sans after:text-red-600 after:ml-3 after:content-['Don\'t_use_headings_with_depth_>4!'];
}

p {
	@apply my-3 first:mt-0 last:mb-0;
}

blockquote {
	@apply pl-3 my-1 text-gray-700 border-l-4 border-iris-700 dark:border-iris-300;
}

pre code {
	@apply my-2;
}

p code,
li code {
	/* Try to match font sizes */
	@apply text-sm;
}

abbr {
	@apply underline-offset-2;
}

details {
	@apply mb-2 px-2 py-1 border-iris-700 border-l-[3px] rounded-md open:block;
}

details summary {
	@apply inline-block font-bold text-iris-900 hover:underline decoration-[0.9px] underline-offset-2 decoration-wavy cursor-pointer;
}

kbd {
	@apply text-sm rounded-md bg-iris-50 px-1;
}

